Changed palette again

--- a/map.html
+++ b/map.html
@@ -25,23 +25,23 @@
           <div style="background-color:#3EAC3E;"></div>
           <div style="background-color:#218221;"></div>
           <div style="background-color:#145214;"></div>-->
-          <div style="background-color:#3DA958;"></div>
-          <div style="background-color:#60BA61;"></div>
-          <div style="background-color:#7FC865;"></div>
-          <div style="background-color:#9DD569;"></div>
-          <div style="background-color:#B6E075;"></div>
+          <div style="background-color:#5EB961;"></div>
+          <div style="background-color:#94D168;"></div>
+          <div style="background-color:#BFE47A;"></div>
+          <div style="background-color:#E1EB8B;"></div>
+          <div style="background-color:#F9E18B;"></div>
           
            
 
-          <div style="background-color:#CEEA84;"></div>
-          <div style="background-color:#E2EB8B;"></div>
-          <div style="background-color:#F4E48B;"></div>
-          <div style="background-color:#FDD682;"></div>
-          <div style="background-color:#FDBE6E;"></div>
-          <div style="background-color:#FBA55D;"></div>
-          <div style="background-color:#F7874F;"></div>
-          <div style="background-color:#F26841;"></div>
-          <div style="background-color:#E44C34;"></div>
+          <div style="background-color:#FDC977;"></div>
+          <div style="background-color:#FCAD60;"></div>
+          <div style="background-color:#F99153;"></div>
+          <div style="background-color:#F57647;"></div>
+          <div style="background-color:#F0653F;"></div>
+          <div style="background-color:#EB5B3A;"></div>
+          <div style="background-color:#E65035;"></div>
+          <div style="background-color:#E14530;"></div>
+          <div style="background-color:#DC3A2B;"></div>
           <div style="background-color:#D73027;"></div>
 
 
@@ -255,46 +255,46 @@
    marker-fill: #D73027;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 140] {
-   marker-fill: #E44C34;
+   marker-fill: #DC3A2B;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 130] {
-   marker-fill: #F26841;
+   marker-fill: #E14530;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 120] {
-   marker-fill: #F7874F;
+   marker-fill: #E65035;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 110] {
-   marker-fill: #FBA55D;
+   marker-fill: #EB5B3A;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 100] {
-   marker-fill: #FDBE6E;
+   marker-fill: #F0653F;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 90] {
-   marker-fill: #FDD682;
+   marker-fill: #F57647;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 80] {
-   marker-fill: #F4E48B;
+   marker-fill: #F99153;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 70] {
-   marker-fill: #E2EB8B;
+   marker-fill: #FCAD60;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 60] {
-   marker-fill: #CEEA84;
+   marker-fill: #FDC977;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 50] {
-   marker-fill: #B6E075;
+   marker-fill: #F9E18B;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 40] {
-   marker-fill: #9DD569;
+   marker-fill: #E1EB8B;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 30] {
-   marker-fill: #7FC865;
+   marker-fill: #BFE47A;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 20] {
-   marker-fill: #60BA61;
+   marker-fill: #94D168;
 }
 #who_georeferenced_clean_v2 [ pm_2_5 <= 10] {
-   marker-fill: #3DA958;
+   marker-fill: #5EB961;
 }
 
 
@@ -378,46 +378,46 @@
    polygon-fill: #D73027;
 }
 #pm25_na [ {0} <= 140] {
-   polygon-fill: #E44C34;
+   polygon-fill: #DC3A2B;
 }
 #pm25_na [ {0} <= 130] {
-   polygon-fill: #F26841;
+   polygon-fill: #E14530;
 }
 #pm25_na [ {0} <= 120] {
-   polygon-fill: #F7874F;
+   polygon-fill: #E65035;
 }
 #pm25_na [ {0} <= 110] {
-   polygon-fill: #FBA55D;
+   polygon-fill: #EB5B3A;
 }
 #pm25_na [ {0} <= 100] {
-   polygon-fill: #FDBE6E;
+   polygon-fill: #F0653F;
 }
 #pm25_na [ {0} <= 90] {
-   polygon-fill: #FDD682;
+   polygon-fill: #F57647;
 }
 #pm25_na [ {0} <= 80] {
-   polygon-fill: #F4E48B;
+   polygon-fill: #F99153;
 }
 #pm25_na [ {0} <= 70] {
-   polygon-fill: #E2EB8B;
+   polygon-fill: #FCAD60;
 }
 #pm25_na [ {0} <= 60] {
-   polygon-fill: #CEEA84;
+   polygon-fill: #FDC977;
 }
 #pm25_na [ {0} <= 50] {
-   polygon-fill: #B6E075;
+   polygon-fill: #F9E18B;
 }
 #pm25_na [ {0} <= 40] {
-   polygon-fill: #9DD569;
+   polygon-fill: #E1EB8B;
 }
 #pm25_na [ {0} <= 30] {
-   polygon-fill: #7FC865;
+   polygon-fill: #BFE47A;
 }
 #pm25_na [ {0} <= 20] {
-   polygon-fill: #60BA61;
+   polygon-fill: #94D168;
 }
 #pm25_na [ {0} <= 10] {
-   polygon-fill: #3DA958;
+   polygon-fill: #5EB961;
 }
 
 
